--- a/results.qmd
+++ b/results.qmd
@@ -8,13 +8,18 @@ library(tidyverse)
 
 player_id_map <- read_rds("statcast_data/player_positioning/sc_positioning.rds") |>
   mutate(fielder_id = as.character(fielder_id)) |>
-  select(fielder_id, name_fielder) |>
+  dplyr::select(fielder_id, name_fielder) |>
   distinct()
 
 safe_results <- read_rds("results/safe_results.rds") |>
   left_join(player_id_map, by = "fielder_id") |>
   rename(fielder_name = name_fielder) |>
-  select(fielder_id, fielder_name, position, year, SAFE)
+  dplyr::select(fielder_id, fielder_name, position, year, SAFE)
+
+safe_sc_results <- read_rds("results/sc_safe_results.rds") |>
+  left_join(player_id_map, by = "fielder_id") |>
+  rename(fielder_name = name_fielder) |>
+  dplyr::select(fielder_id, fielder_name, position, year, SAFE)
 
 player_OAA <- data.frame(
   fielder_name = c("Arenado, Nolan", "Swanson, Dansby", "Giménez, Andrés", 
@@ -35,5 +40,10 @@ safe_results |>
   select(fielder_name, year, position, SAFE, OAA_percentile) |>
   kableExtra::kable(col.names = c("Player", "Year", "Position", "SAFE", "OAA %")) |>
   kableExtra::kable_styling()
+```
+
+
+```{r}
+
 ```
 
